# AutoSOTA

./: .gitignore  LICENSE  README.md  _config.yml  index.html  script.js  styles.css
paper-101-ACIA/: .gitignore  IMPLEMENTATION_GUIDE.md  License.txt  OPTIMIZATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_cmnist_experiment.py  run_cmnist_fast.py  run_cmnist_v2.py  setup.py
paper-101-ACIA/acia/: __init__.py
paper-101-ACIA/acia/core/: algorithms.py  kernels.py  spaces.py
paper-101-ACIA/acia/datasets/: benchmarks.py
paper-101-ACIA/acia/experiments/: runners.py
paper-101-ACIA/acia/metrics/: evaluation.py
paper-101-ACIA/acia/models/: architectures.py  training.py
paper-101-ACIA/acia/visualization/: plots.py
paper-101-ACIA/examples/: example_colored_mnist.py  example_custom_dataset.py
paper-101-ACIA/images/: figure.pptx
paper-2-PINet/: .dockerignore  .gitignore  .gitmessage  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  OPTIMIZATION.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  sitecustomize.py
paper-2-PINet/.github/workflows/: code-style.yaml  commitlint.yaml  test.yaml
paper-2-PINet/src/benchmarks/: model.py  other_projections.py
paper-2-PINet/src/benchmarks/QP/: __init__.py  generate_QP.py  load_QP.py  parse_results.py  plotting.py  run_QP.py  run_QP_batch.sh
paper-2-PINet/src/benchmarks/QP/ids/: dc3_nonconvex_1.yaml  dc3_nonconvex_2.yaml  dc3_simple_1.yaml  (+2 more)
paper-2-PINet/src/benchmarks/configs/: benchmark_config_default.yaml  benchmark_config_manual.yaml  benchmark_cvxpy.yaml  benchmark_jaxopt_large.yaml  benchmark_jaxopt_small.yaml  benchmark_large_autotune.yaml  benchmark_large_noequil_autotune.yaml  benchmark_small_autotune.yaml  benchmark_softpen_small.yaml  toy_MPC.yaml
paper-2-PINet/src/benchmarks/toy_MPC/: __init__.py  generate_toy_MPC.py  load_toy_MPC.py  model.py  plotting.py  run_toy_MPC.py
paper-2-PINet/src/benchmarks/toy_SOC/: main.py
paper-2-PINet/src/pinet/: __init__.py  dataclasses.py  equilibration.py  project.py
paper-2-PINet/src/pinet/constraints/: __init__.py  affine_equality.py  affine_inequality.py  base.py  box.py  constraint_parser.py
paper-2-PINet/src/pinet/solver/: __init__.py  admm.py
paper-2-PINet/src/test/: test_box.py  test_clipped_affine_sine.py  test_clipped_sine.py  test_constraint_violation.py  test_dataclasses.py  test_equality.py  test_equality_2d.py  test_equilibration.py  test_parser_and_affine_inequality.py  test_project.py  test_vjp.py
paper-2-PINet/src/tools/: autotuning.py  utils.py
paper-5-TSAE/: OPTIMIZATION.md  README.md  example.env  pyproject.toml
paper-5-TSAE/dictionary_learning/dictionary_learning/: __init__.py  buffer.py  demo_config.py  eval_temporal.py  evaluation.py  train_baseline.py  train_batchtopk.py  train_temporal.py  utils.py
paper-5-TSAE/dictionary_learning/dictionary_learning/trainers/: __init__.py  standard.py  temporal_sequence_top_k.py
paper-5-TSAE/src/: README.md  activations.py  data.py  process_sae_bench_autointerp.py  wikipedia_categories.csv
paper-5-TSAE/src/experiments/: probing.py  tsne.py
paper-51-FlashTP/: .gitignore  LICENSE  OPTIMIZATION.md  README.md  pyproject.toml  requirements.txt  setup.py
paper-51-FlashTP/example/: benchmark_timing.py  flashTP_lammps_test.py  flashTP_test.py  test.sh
paper-51-FlashTP/flashTP_e3nn/: __init__.py  flashTP.py  utils.py
paper-51-FlashTP/flashTP_e3nn/sptp_exp_opt/: bwd_bwd_sptp_linear_v2_shared_exp.cu  bwd_bwd_sptp_linear_v2_shared_exp_double.cu  bwd_sptp_linear_shared_exp.cu  bwd_sptp_linear_shared_exp_double.cu  fused_e3nn_exp_opt.py  fwd_sptp_linear_v2_shared_exp.cu  fwd_sptp_linear_v2_shared_exp_double.cu  sptp_exp_opt.cpp  sptp_exp_opt.hpp
paper-51-FlashTP/flashTP_e3nn/sptp_exp_opt_extcg/: bwd_bwd_sptp_linear_v2_shared_exp.cu  bwd_bwd_sptp_linear_v2_shared_exp_double.cu  bwd_sptp_linear_shared_exp.cu  bwd_sptp_linear_shared_exp_double.cu  fused_e3nn_exp_opt_extcg.py  fwd_sptp_linear_v2_shared_exp.cu  fwd_sptp_linear_v2_shared_exp_double.cu  sptp_exp_opt.cpp  sptp_exp_opt.hpp
paper-51-FlashTP/flashTP_e3nn/sptp_exp_opt_large/: CMakeLists.txt  bwd_bwd_sptp_linear_v2_shared_exp.cu  bwd_bwd_sptp_linear_v2_shared_exp_double.cu  bwd_sptp_linear_shared_exp.cu  bwd_sptp_linear_shared_exp_double.cu  fused_e3nn_exp_opt_large.py  fused_e3nn_exp_opt_large_lammps.py  fwd_sptp_linear_v2_shared_exp.cu  fwd_sptp_linear_v2_shared_exp_double.cu  python_pybind.cpp  sptp_exp_opt.hpp  sptp_exp_opt_large.cpp  torch_register.cpp
paper-51-FlashTP/ir_config/mace/: large.json  medium.json  small.json
paper-51-FlashTP/ir_config/nequip/: 4_32_1_p_sc.txt  4_32_2_p_sc.txt  4_32_3_p_sc.txt  4_32_4_p_sc.txt  4_32_5_p_sc.txt
paper-51-FlashTP/ir_config/sevennet/: SevenNet-MF-ompa.json  sevennet-0.json  sevennet-l3i5.json
paper-69-TreeHFD/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OPTIMIZATION.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  ruff.toml  run_analytical.py
paper-69-TreeHFD/docs/: .readthedocs.yaml
paper-69-TreeHFD/docs/source/: cartesian_partition.rst  conf.py  ensemble.rst  index.rst  optimization_matrix.rst  tree.rst  tree_structure.rst  validation.rst
paper-69-TreeHFD/examples/: README.md  example_housing.py  example_simulated_data.py
paper-69-TreeHFD/src/treehfd/: __init__.py  cartesian_partition.py  ensemble.py  optimization_matrix.py  tree.py  tree_structure.py  validation.py
paper-69-TreeHFD/tests/: __init__.py  generate_datasets.py  test_cartesian_partition.py  test_optimization_matrix.py  test_tree_structure.py  test_treehfd.py  test_validation.py  test_xgbtreehfd.py  utils.py
paper-69-TreeHFD/tests/datasets/: dataset_X_n1000_seed61.csv  dataset_X_n100_seed11.csv  dataset_X_n100_seed41.csv  dataset_X_n100_seed51.csv  dataset_X_n10_seed11.csv  dataset_X_n10_seed21.csv  dataset_Xnew_n3_seed11.csv  dataset_Xnew_n3_seed51.csv  dataset_y_n1000_seed61.csv  dataset_y_n100_seed11.csv  dataset_y_n100_seed41.csv  dataset_y_n100_seed51.csv  dataset_y_n10_seed11.csv  dataset_y_n10_seed21.csv
(+4231 files in other folders)
